--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 delegate = "0.11.0"
+itertools = "0.12.0"
 lazy_static = "1.4.0"
 rayon = "1.8.0"
 regex = "1.10.2"
