--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 delegate = "0.11.0"
+float-cmp = "0.9.0"
 itertools = "0.12.0"
 lazy_static = "1.4.0"
 num = "0.4.1"
